<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/asld_nav_schedule"
        android:title="@string/title_schedule"
        app:contentDescription="@string/title_schedule" />

    <item
        android:id="@+id/navigation_agenda"
        android:icon="@drawable/asld_nav_agenda"
        android:title="@string/title_agenda"
        app:contentDescription="@string/title_agenda" />

    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/asld_nav_info"
        android:title="@string/title_info"
        app:contentDescription="@string/title_info" />
</menu>
